# Head-Nurse

./: .gitignore  README.md  config.example.yaml  launcher.py  pyproject.toml  setup.sh  setup_app.py
docs/superpowers/plans/: 2026-05-27-menubar-app.md  2026-06-25-outlook-caldav-sync.md
docs/superpowers/specs/: 2026-05-27-menubar-app-design.md  2026-06-10-dispatch-to-headnurse-skill-design.md  2026-06-25-outlook-caldav-sync-design.md
launchd/: com.kanban-agent.plist
scripts/: render_icons.py
src/kanban_agent/: __main__.py  agent.py  calendar_sync.py  config.py  device_code_flow.py  executor.py  github.py  logging_setup.py  menubar.py  models.py  outlook_token.py  project_board.py  status.py
tests/: test_calendar_sync.py  test_device_code_flow.py  test_outlook_token.py  test_status.py
