[project]
name = "kanban-agent"
version = "0.1.0"
description = "GitHub Project V2 kanban agent for remote task execution"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
kanban-agent = "kanban_agent.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
