[project]
name = "kanban-agent"
version = "0.1.0"
description = "GitHub Project V2 kanban agent for remote task execution"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "rumps>=0.4.0", "httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "py2app>=0.28"]

[project.scripts]
kanban-agent = "kanban_agent.__main__:main"
kanban-menubar = "kanban_agent.menubar:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
